--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <img src="purple_text_logo_NB.png" alt="purple_logo">
 <h1>Public instance coming soon</h1>
-<p>This will be a public instance of skidX, a self hosted malware sandbox for minecraft mods</p>
+<p>At some point this will be a public instance of skidX, a self hosted malware sandbox for minecraft mods (Probbly when the project exits the proof of concept stage)</p>
 <p><a href="https://github.com/SylusSquared7/skidX">github.com/SylusSquared7/skidX<a/></p>
 </body>
 </html>
