--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h1>Public instance coming soon</h1>
 <p>At some point this will be a public instance of skidX, a self hosted malware sandbox for minecraft mods (Probbly when the project exits the proof of concept stage)</p>
 <p><a href="https://github.com/SylusSquared7/skidX">github.com/SylusSquared7/skidX<a/></p>
+<p>The actual instance won't be hosted on github pages this is just to show the above message</p>
 </body>
 </html>
