--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Coming soon</title>
 </head>
-<body style="background-color:#506784;">
+<body>
 
 <img src="purple_text_logo_NB.png" alt="purple_logo">
 <h1>Public instance coming soon</h1>
