<!DOCTYPE html> <html> <head>   <title>Coming soon</title>   <style>     body {       font-family: Arial, sans-serif;       text-align: center;       background-color: #f7f7f7; /* a light gray background color */     }     img {       width: 200px; /* adjust the width to your liking */       margin: 20px;     }     h1 {       color: #6c5ce7; /* a nice purple color to match your logo */     }   </style> </head> <body>   <img src="purple_text_logo_NB.png" alt="purple_logo">   <h1>Public instance coming soon</h1>   <p>At some point, this will be a public instance of skidX, a self-hosted malware sandbox for Minecraft mods. (Probably when the project exits the proof of concept stage)</p>   <p><a href="https://github.com/SylusSquared7/skidX">View the project on GitHub</a></p>   <p>The actual instance won't be hosted on GitHub Pages; this is just a placeholder.</p> </body> </html>

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Coming soon</title>
+  <title>Coming soon</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #ebe8e8;
+    }
+    img {
+      width: 500px;
+      margin: 20px;
+    }
+    h1 {
+      color: #6c5ce7;
+    }
+  </style>
 </head>
 <body>
-
-<img src="purple_text_logo_NB.png" alt="purple_logo">
-<h1>Public instance coming soon</h1>
-<p>At some point this will be a public instance of skidX, a self hosted malware sandbox for minecraft mods (Probbly when the project exits the proof of concept stage)</p>
-<p><a href="https://github.com/SylusSquared7/skidX">github.com/SylusSquared7/skidX<a/></p>
-<p>The actual instance won't be hosted on github pages this is just to show the above message</p>
+  <img src="purple_text_logo_NB.png" alt="purple_logo">
+  <h1>Public instance coming soon</h1>
+  <p>At some point, this will be a public instance of skidX, a self-hosted malware sandbox for Minecraft mods. (Probably when the project exits the proof of concept stage)</p>
+  <p><a href="https://github.com/SylusSquared7/skidX">View the project on GitHub</a></p>
+  <p>The actual instance won't be hosted on GitHub Pages; this is just a placeholder.</p>
 </body>
 </html>
