--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   <p>At some point, this will be a public instance of skidX, a self-hosted malware sandbox for Minecraft mods. (Probably when the project exits the proof of concept stage)</p>
   <p><a href="https://github.com/SylusSquared7/skidX">View the project on GitHub</a></p>
   <p>The actual instance won't be hosted on GitHub Pages; this is just a placeholder.</p>
+  <p>GithubPages will most likley host the docs for skidX</p>
 </body>
 </html>
