--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       font-family: Arial, sans-serif;
       text-align: center;
       background-color: #ebe8e8;
+      margin: 0; /* add this to remove default margin */
     }
     img {
       width: 500px;
@@ -14,6 +15,15 @@
     }
     h1 {
       color: #6c5ce7;
+    }
+    footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background-color: #f0f0f0;
+      padding: 10px;
+      text-align: center;
+      color: #666;
     }
   </style>
 </head>
@@ -24,5 +34,8 @@
   <p><a href="https://github.com/SylusSquared7/skidX">View the project on GitHub</a></p>
   <p>The actual instance won't be hosted on GitHub Pages; this is just a placeholder.</p>
   <p>GithubPages will most likley host the docs for skidX</p>
+  <footer>
+    <p>Contact me at sylus@sylus.dev if you find issues or want to suggest feature</p>
+  </footer>
 </body>
 </html>
