--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       font-family: Arial, sans-serif;
       text-align: center;
       background-color: #ebe8e8;
-      margin: 0; /* add this to remove default margin */
+      margin: 0;
     }
     img {
       width: 500px;
@@ -26,6 +26,7 @@
       color: #666;
     }
   </style>
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <img src="purple_text_logo_NB.png" alt="purple_logo">
