--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       color: #666;
     }
   </style>
-  <link rel="icon" href="favicon.ico">
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <img src="purple_text_logo_NB.png" alt="purple_logo">
