--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <p>The actual instance won't be hosted on GitHub Pages; this is just a placeholder.</p>
   <p>GithubPages will most likley host the docs for skidX</p>
   <footer>
-    <p>Contact me at sylus@sylus.dev if you find issues or want to suggest feature</p>
+    <p>Email me at sylus@sylus.dev if you find issues or want to suggest feature</p>
   </footer>
 </body>
 </html>
