Changed index.html to reflect the new site

--- a/oldIndex.html
+++ b/oldIndex.html
@@ -30,11 +30,11 @@
 </head>
 <body>
   <img src="purple_text_logo_NB.png" alt="purple_logo">
-  <h1>Documentation coming soon</h1>
-  <p>Soon this site will host the docs for skidX, my self hosted malware analysis sandbox for minecraft mods</p>
+  <h1>Public instance coming soon</h1>
+  <p>At some point, this will be a public instance of skidX, a self-hosted malware sandbox for Minecraft mods. (Probably when the project exits the proof of concept stage)</p>
   <p><a href="https://github.com/SylusSquared7/skidX">View the project on GitHub</a></p>
-  <p>A public instance will be available at either <a href="https://sylus.dev">sylus.dev</a> or <a href="https://instance.sylus.dev">instance.sylus.dev</a> </p>
-  <p>The public instance will be available some time during V1</p>
+  <p>The actual instance won't be hosted on GitHub Pages; this is just a placeholder.</p>
+  <p>GithubPages will most likley host the docs for skidX</p>
   <footer>
     <p>Email me at sylus@sylus.dev if you find issues or want to suggest feature</p>
   </footer>
