--- a/setup/setup.html
+++ b/setup/setup.html
@@ -3,42 +3,43 @@
 <head>
   <title>Coming soon</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #ebe8e8;
-      margin: 0;
-    }
-    img {
-      width: 500px;
-      margin: 20px;
-    }
-    h1 {
-      color: #6c5ce7;
-    }
-    footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background-color: #f0f0f0;
-      padding: 10px;
-      text-align: center;
-      color: #666;
-    }
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: #ebe8e8;
+    margin: 0;
+  }
+  img {
+    width: 500px;
+    margin: 20px;
+  }
+  h1 {
+    color: #6c5ce7;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #f0f0f0;
+    padding: 10px;
+    text-align: center;
+    color: #666;
+  }
 
-    pre {
-    font-size: 18px;
+  pre {
+  font-size: 18px;
   }
 
   .sidebar {
       background-color: #737f8f;
       width: 200px;
       padding: 20px;
+      height: 100%;
       box-sizing: border-box;
+      overflow-x: hidden;
       position: fixed;
       top: 0;
       left: 0;
-      height: 100%;
       overflow-y: auto;
   }
 
@@ -73,9 +74,9 @@
 <body>
   <div class="sidebar">
     <button type="button" class="sidebar-button" onclick="loadPage('')">Home</button>
-    <button type="button" class="sidebar-button" onclick="loadPage('Server setup')">server-setup</button>
-    <button type="button" class="sidebar-button" onclick="loadPage('Client setup')">client-setup</button>
-    <button type="button" class="sidebar-button" onclick="loadPage('Useage')">useage</button>
+    <button type="button" class="sidebar-button" onclick="loadPage('server-setup')">Server setup</button>
+    <button type="button" class="sidebar-button" onclick="loadPage('client-setup')">Client setup</button>
+    <button type="button" class="sidebar-button" onclick="loadPage('useage')">Useage</button>
   </div>
   <img src="purple_text_logo_NB.png" alt="purple_logo">
   <h1>Documentation coming soon</h1>
