Fixed the logo on the development page

--- a/development/dev.html
+++ b/development/dev.html
@@ -106,7 +106,7 @@
     <button type="button" class="sidebar-button" onclick="loadPage('usage')">Usage</button>
   </div>
   <div class="content">
-    <img src="purple_text_logo_NB.png" alt="purple_logo">
+    <img src="https://raw.githubusercontent.com/sylus-squared/sylus-squared.github.io/1f38e02c1c2307984746c32245dadb0d28118422/purple_text_logo_NB.png" alt="purple_logo">
     <h1>Connecting to the backend</h1>
     <p>The backend communicates with the frontend over a socket connection. The IP and port to use are found in the config.yml.</p>
     <p>By default it uses localhost and port 65432</p>
